[package]
name = "gomicollector"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A simple mark-sweep garbage collector"
repository = "https://github.com/speed1313/gomicollector"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
